update dark theme and change selling quantity

--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -141,6 +141,7 @@
 		$promotionStatusBarColorsDark,
 		$connectModalColorsDark,
 		$highlightedTextColorsDark,
+		$createCardColorsDark,
 	);
 
 	@each $key_name in $colors {
