add theme to icon button

--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -142,6 +142,7 @@
 		$connectModalColorsDark,
 		$highlightedTextColorsDark,
 		$createCardColorsDark,
+		$iconButtonColorsDark,
 	);
 
 	@each $key_name in $colors {
