--- a/src/assets/styles/component-variables/_icon_button.scss
+++ b/src/assets/styles/component-variables/_icon_button.scss
@@ -81,3 +81,48 @@ $iconButtonColorsLight: (
   "icon-button-filled-active-icon-color": #8A7FF6,
   "icon-button-filled-disabled-icon-color": #64656A,
 );
+
+$iconButtonColorsDark: (
+  ////outlined
+  //background
+  "icon-button-outlined-default-background": none,
+  "icon-button-outlined-hover-background": none,
+  "icon-button-outlined-active-background": none,
+  //border
+  "icon-button-outlined-default-border": none,
+  "icon-button-outlined-hover-border": none,
+  "icon-button-outlined-active-border": none,
+  //icon
+  "icon-button-outlined-default-icon-color": #DFE3EC,
+  "icon-button-outlined-hover-icon-color": #958BF6,
+  "icon-button-outlined-active-icon-color": #958BF6,
+  "icon-button-outlined-disabled-icon-color": #DFE3EC,
+  ////outlined-secondary
+  //background
+  "icon-button-outlined-secondary-default-background": none,
+  "icon-button-outlined-secondary-hover-background": #DFE3EC,
+  "icon-button-outlined-secondary-active-background": #DFE3EC,
+  //border
+  "icon-button-outlined-secondary-default-border": none,
+  "icon-button-outlined-secondary-hover-border": none,
+  "icon-button-outlined-secondary-active-border": none,
+  //icon
+  "icon-button-outlined-secondary-default-icon-color": #7A8499,
+  "icon-button-outlined-secondary-hover-icon-color": #958BF6,
+  "icon-button-outlined-secondary-active-icon-color": #958BF6,
+  "icon-button-outlined-secondary-disabled-icon-color": #64656A,
+  ////filled
+  //background
+  "icon-button-filled-default-background": #FFFFFF,
+  "icon-button-filled-hover-background": #FFFFFF,
+  "icon-button-filled-active-background": #FFFFFF,
+  //border
+  "icon-button-filled-default-border": #DFE3EC,
+  "icon-button-filled-hover-border": #8A7FF6,
+  "icon-button-filled-active-border": #8A7FF6,
+  //icon
+  "icon-button-filled-default-icon-color": #6F778B,
+  "icon-button-filled-hover-icon-color": #8A7FF6,
+  "icon-button-filled-active-icon-color": #8A7FF6,
+  "icon-button-filled-disabled-icon-color": #64656A,
+);
