add privacy policy page

--- a/src/components/Typography/styles.module.scss
+++ b/src/components/Typography/styles.module.scss
@@ -40,6 +40,12 @@
   line-height: 45px;
 }
 
+.subtitle-2 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 34px;
+}
+
 .body-1 {
   font-weight: 400;
   font-size: 18px;
