--- a/src/pages/NftPage/components/NftInfo/styles.module.scss
+++ b/src/pages/NftPage/components/NftInfo/styles.module.scss
@@ -45,6 +45,13 @@
       &Name{
         flex: 0 0 auto;
       }
+      .actionButtons{
+        flex: 0 0 40%;
+        @include flex(row-reverse, center, flex-start);
+        .actionItem{
+          margin-bottom: space(4);
+        }
+      }
     }
   }
 }
