filters icon color

--- a/src/pages/Collection/components/Body/styles.module.scss
+++ b/src/pages/Collection/components/Body/styles.module.scss
@@ -14,6 +14,9 @@
     .collections{
       display: none;
     }
+    .filtersIcon{
+      color: var(--filters-button-icon-color);
+    }
   }
   &Content {
     display: grid;
