--- a/src/pages/NftPage/components/NftInfo/styles.module.scss
+++ b/src/pages/NftPage/components/NftInfo/styles.module.scss
@@ -47,7 +47,7 @@
       }
       .actionButtons{
         flex: 0 0 40%;
-        @include flex(row-reverse, center, flex-start);
+        @include flex(row-reverse, center, flex-start, wrap);
         .actionItem{
           margin-bottom: space(4);
         }
