--- a/src/pages/Profile/components/Nfts/styles.module.scss
+++ b/src/pages/Profile/components/Nfts/styles.module.scss
@@ -128,6 +128,7 @@
   .total {
     @include flex(row, center, flex-start);
     margin-top: space(16);
+    margin-bottom: space(16);
     width: 100%;
     &Text {
       font-size: 20px;
